# Civil-Liberties-Knowledge-Assistant

./: .gitignore  README.md  pyproject.toml  sync.sh
corpus/: CORPUS_VERSION  acquisition-log.md  checksums.sha256  manifest.csv  validation-report.md  validation-results.json
corpus/derived-checksums/: freedomhouse.json
corpus/sources/: accessnow.yaml  cipesa.yaml  freedomhouse.yaml  ooni.yaml
data/eval/: default_method.json  diversity_diagnostic.md  evaluation-report.md  filter_report.md  ground_truth.json  ground_truth_filtered.json  ground_truth_review_sample.json
data/metadata/: accessnow-africa-2022-keepiton-shutdowns.json  accessnow-africa-2023-keepiton-shutdowns.json  accessnow-africa-2024-keepiton-shutdowns.json  accessnow-africa-2025-keepiton-shutdowns.json  cipesa-africa-2022-sifa-biometrics.json  cipesa-africa-2024-sifa-elections.json  cipesa-africa-2025-sifa-ai.json  cipesa-et-2025-sifa-ai-country.json  cipesa-ke-2025-sifa-ai-country.json  cipesa-rw-2025-upr-submission.json  cipesa-tz-2026-upr-submission.json  cipesa-ug-2025-sifa-ai-country.json  cipesa-ug-2026-shutdown-economic-impact.json  freedomhouse-et-2022-fotn.json  freedomhouse-et-2023-fotn.json  freedomhouse-et-2024-fotn.json  freedomhouse-et-2025-fotn.json  freedomhouse-ke-2022-fotn.json  freedomhouse-ke-2023-fotn.json  freedomhouse-ke-2024-fotn.json  freedomhouse-ke-2025-fotn.json  freedomhouse-rw-2022-fotn.json  freedomhouse-rw-2023-fotn.json  freedomhouse-rw-2024-fotn.json  (+11 more)
docs/: PROJECT_CONTINUITY.md  archituecture.md.docx  corpus-inclusion-rubric.md  data_governance.md  generation-design.md  ingestion-design.md  licensing.md  retrieval-design.md  ziM3eRpl
(+27 files in other folders)
